# learning_gcloud_and_terraform

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  Makefile  README.md  output.tf  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-checks.yml  pre-commit.yml  python-lint.yml  terraform-lint.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
app/: .env.example  .flake8  Makefile  README.md  compose.yaml  pyproject.toml
app/app/: Dockerfile  app.py  config.py  models.py  routes.py
dev/: Makefile  main.tf  output.tf  variables.tf
dev/artifact/: main.tf
dev/cloudrun/: main.tf  outputs.tf
dev/container/: .env.example  Makefile  compose.yaml
dev/container/app/: Dockerfile  app.py  config.py  requirements.txt  routes.py
dev/db/: .gitignore  README.md  main.tf  output.tf
dev/iam/: main.tf
dev/loadbalancer/: main.tf
dev/vpc/: main.tf  output.tf
env/deploy/artifact/: main.tf  output.tf  variables.tf
env/dev/: .terraform.lock.hcl  Makefile  main.tf
env/dev/artifact/: output.tf
env/dev/cloudrun/: main.tf  outputs.tf  variables.tf
env/dev/container/: README.md
env/dev/db/: README.md  main.tf  output.tf  variables.tf
env/stg/: main.tf  variables.tf
modules/cloudrun/: main.tf  outputs.tf  variables.tf
modules/db/: main.tf  outputs.tf  variables.tf
modules/iam/: main.tf  outputs.tf  variables.tf
modules/loadbalancer/: main.tf  outputs.tf  variables.tf
modules/vpc/: main.tf  outputs.tf  variables.tf
(+26 files in other folders)
