[project]
name = "learning-gcloud-and-terraform"
version = "0.1.0"
description = "GCP and Terraform infrastructure project with Flask application"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
